# baxter_cashier

./: .gitignore  LICENSE.md  README.md  manifest.xml  motion_planning.py
configuration/: rviz.rviz
configuration/moveit_scene_objects/: robotics_lab_environment.scene
configuration/moveit_scene_objects/individual_objects/: back_wall.scene  side_wall.scene  table.scene  tripod.scene
documents/: amount_due_template.pxm  change_due_template.pxm  thank_you_message.pxm
documents/Banknotes/Templates (Editable)/: five_bill.pxm  template.pxm
documents/Eyes Image/: looking_eyes.xcf  looking_left_eyes.xcf  looking_right_eyes.xcf  normal_eyes.xcf
documents/Money Bills/Templates (Editable)/: five_bill.pxm  one_bill.pxm
scripts/baxter_cashier_manipulation/: CMakeLists.txt  package.xml
scripts/baxter_cashier_manipulation/launch/: cashier.launch  moveit.launch
scripts/baxter_cashier_manipulation/src/: baxter_controller.py  baxter_pose.py  body_tracker_listener.py  cashier.py  environment_factory.py  motion_planning.py  moveit_controller.py  runner.py  shopkeeper.py  test.py
scripts/baxter_cashier_manipulation/srv/: GetUserPose.srv  RecogniseBanknote.srv
scripts/baxter_cashier_perception/: CMakeLists.txt  package.xml
scripts/baxter_cashier_perception/launch/: baxter_head_camera_ar_track.launch  body_tracker.launch  camera_driver.launch  rviz_config.rviz
scripts/baxter_cashier_perception/src/: banknote_recogniser.py  body_tracker_listener.py  camera_calibration.py  hand_pose_detector.py  image_listener.py
